[CQ] migrate off deprecated `Class.newInstance()` invocation (#8376)
Replaces `clazz.newInstance()` with the preferred
`clazz.getDeclaredConstructor().newInstance()` and updates exception
handling appropriately.


Relevant verifier output:

```
      #Deprecated method java.lang.Class.newInstance() invocation
          Deprecated method java.lang.Class.newInstance() : T is invoked in io.flutter.actions.OpenInAndroidStudioAction.actionPerformed(AnActionEvent) : void
```


---

- [x] I’ve reviewed the contributor guide and applied the relevant
portions to this PR.

<details>
  <summary>Contribution guidelines:</summary><br>

- See our [contributor
guide]([https://github.com/dart-lang/sdk/blob/main/CONTRIBUTING.md](https://github.com/flutter/flutter/blob/main/docs/contributing/Tree-hygiene.md#overview)
for general expectations for PRs.
- Larger or significant changes should be discussed in an issue before
creating a PR.
- Dart contributions to our repos should follow the [Dart style
guide](https://dart.dev/guides/language/effective-dart) and use `dart
format`.
- Java and Kotlin contributions should strive to follow Java and Kotlin
best practices
([discussion](https://github.com/flutter/flutter-intellij/issues/8098)).
</details>